# ScreenActivityRecorder

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  build_exe.ps1  pyproject.toml  run_gui.ps1  run_once.ps1  view_today.ps1
screen_activity_agent/: __init__.py  agent.py  classification.py  cli.py  config.py  diagnose.py  gui.py  jsonutil.py  logs.py  models.py  privacy.py  prompts.py  reports.py  screenshot.py  storage.py  timeutil.py  vision_client.py
scripts/: rebuild_events.py
